style.css
.body{
  font-family: 'Noto Sans JP', sans-serif;
  margin: 0;
  margin-bottom: 1em;
  color: #707070;
  min-height: 100vh;
  min-height: 100dvh;
}

.header{
  color: #707070;
  border-bottom: solid 1px #acacac;
  padding: 0;
  margin: 0;
  width: 100%;
}

.iconImage{
  border: solid 1px #dbdbdb;
  border-radius: 50%;
  height: 2em;
  width: 2em;
}

.titleLink{
  display: inline-block;
  color: #707070;
  appearance: none;
  border: none;
  padding: 0;
  margin: 1em;
  text-decoration: none;
}
.titleLink:hover{
  color: #cfcfcf;
}

.titleLinkInner{
  display: flex;
  align-items: center;
}

.title{
  font-size: 24px;
  margin: 0;
  margin-left: 0.2em;
}


.mainContents{
  width: 100%;
  /* position: relative; */
}

@keyframes fadein {
  0% {
     transform: translate(-50%, -150%);
     background-position: 100%;
     animation-timing-function: ease;
    }
    7% {
      transform: translate(-50%, 0);
      background-position: 100%;
      animation-timing-function : linear;
    }
    93%{
      transform: translate(-50%, 0);
      background-position: 0;
      animation-timing-function : linear;
    }
    100%{
      transform: translate(-50%, -150%);
      background-position: 0;
      animation-timing-function: ease;
  }
}
.messageBox{
  position: absolute;
  top: 1em;
  left: 50%;
  margin: 0 auto;
  color: #4f4f4f;
  border: #707070 solid 0.5px;
  border-radius: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  animation-name: fadein;
  animation-duration: 6s;
  display: flex;
  align-items: center;
  background: linear-gradient(to right, #f1f1f1 50%, #ffffff 50%);
  background-size: 200% 100%;
  width: 30em;
}
.messageBox:hover{
  animation-play-state: paused;
}


.contentsWrapper{
  display: grid;
  grid-template-columns: repeat(12, [col-start] 1fr);
  grid-auto-rows: minmax(0, auto);
  gap: 1em;
  width: 100%;
  max-width: 1250px;
  margin: 0 auto 2em auto;
}

.sideContent{
  grid-column: 1 / 4;
  grid-row: 1 / 2;
  min-width: 300px;
  margin-top: 3em;
}

.bodyContent{
  text-align: center;
  grid-column: 4 / 13;
  overflow: hidden;
  position: relative;
}

@media (max-width: 900px) {
  .sideContent{
    grid-row: 2 / 3;
    grid-column: 1/13;
  }
  .bodyContent{
    grid-row: 1 / 2;
    grid-column: 1/13;
  }
}

/* ------------------- */

.historyTitleWrapper {
  display: flex;
  align-items: center;
  border-bottom: solid 1px #acacac;
  padding-left: 0.5em;
}

@media(max-width: 900px){
  .historyTitleWrapper{
    margin: 0 0.5em;
    justify-content: center;
    padding-left: 0;
  }
}

.historyTitle {
  margin: 0;
  margin-left: 0.25em;
}

.historyWrapper{
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.historyChild{
  padding: 0.5em 0;
}

.historyUnorderedList {
  margin: 0;
}

@media (min-width: 900px) {
  .historyUnorderedList{
    height: 80vh;
    overflow-y: scroll;
    height: 80vh;
  }
}

.historyLink {
  overflow: hidden;
  white-space: nowrap;
  text-decoration:none;
  text-overflow: ellipsis;
  color: #707070;
  width: 100%;
}

.historyLink:hover {
  color: #bee8d9;
}

.historyList {
  margin: 1em 0;
  list-style: none;
  display: flex;
  align-items: center;
}

.buttonToCopyLink {
  margin-left: auto;
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  appearance: none;
  color: #707070;
  display: flex;
  justify-content: center;
  align-items: center;
}
.buttonToCopyLink:hover{
  background-color: #e6e6e6;
}

.copyIconSvg {
  margin-left: auto;
}

/* ----------------- */

.readButton{
  width: 15em;
  height: 3em;
  font-size: larger;
  color: #4f4f4f;
  background-color: #9bf5d5;
  border: none;
  padding: 0;
  appearance: none;
  margin: 6em auto;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.5em;
}
.readButton:hover{
  background-color: #c9feec;
  cursor: pointer;
}

.readButtonText{
  margin-left: 0.5em;
}

/* ------------------ */

.howToUseWrapper{
  margin-top: 2em;
  width: 80%;
  margin: 0 auto;
  width: 35em;
  padding: 0 auto;
}

.subTitleWrapper{
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: solid 1px #acacac;
}

.howToUseTitle{
  margin: 0;
  margin-left: 0.25em;
}

.howToUseOrderList{
  text-align: left;
  padding: 1em 3em;
  margin: 0;
}

.howToUseList{
  margin: 1em;
}

@media (max-width: 35em) {
  .howToUseWrapper{
    width: 100%;
  }
}

@media (max-width: 900px) {
  .howToUseOrderList{
    padding: 1em 1em 1em 2em;
  }
  .subTitleWrapper{
    margin: 0 0.5em;
  }
  .howToUseWrapper{
    width: 100%;
  }
  .contentsWrapper{
    max-width: 35em;
  }
}

/* -------------- */
.footer{
  text-align: center;
  position: sticky;
  top: 100vh;
}

.footerTitle{
  margin: 0;
}

